--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         Source: Map PLUTO 2020 v8 - <a target="_blank"
         href="https://www1.nyc.gov/site/planning/data-maps/open-data/dwn-pluto-mappluto.page" >NYC Department of City Planning.</a>
       </h4>
-    
-      <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Toggle Sidebar</button>
+
+      <!-- <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Toggle Sidebar</button>
         </div>
           <div id='property-details'>
             <h1>PROPERTY DETAILS</h1>
@@ -105,7 +105,7 @@
             <div class="sidebar-footer">
               <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Close</button>
             </div>
-          </div>
+          </div> -->
 
 <!-- \\bring in bootstrap\\ -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
