--- a/index.html
+++ b/index.html
@@ -101,24 +101,25 @@
       </h4>
 
       <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Toggle Sidebar</button>
-        </div>
-          <div id='property-details'>
-            <h1>PROPERTY DETAILS</h1>
-            <p>This is a test of information test tes tes asldkjf asdflkj </p>
-            <div class="sidebar-footer">
-              <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Close</button>
-            </div>
-          </div>
+    </div>
+
+    <div id='property-details'>
+      <h1>PROPERTY DETAILS</h1>
+      <p>This is a test of information test tes tes asldkjf asdflkj </p>
+      <div class="sidebar-footer">
+        <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Close</button>
+      </div>
+    </div>
 
 
     <div id='mapcontainer'>MAP</div>
       </div>
-        <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+        <script integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
-      </div>
+    </div>
 
 </body>
 
