--- a/index.html
+++ b/index.html
@@ -84,16 +84,14 @@
       <p> Use this tool to understand the available incentives and potential
           regulatory hurdles associated with development of a parcel of land. </p>
 
-      <h2> Percent Built</h2>
-      <h3> Built FAR/Max FAR</h3>
+      <h2> Likelihood of Development</h2>
         <div id="legend1">
-          <div><span style="background-color: #edf8fb; margin-left: 10px"></span>0-25%</div>
-          <div><span style="background-color: #b3cde3; margin-left: 10px"></span>25-50%</div>
-          <div><span style="background-color: #8c96c6; margin-left: 10px"></span>50-75%</div>
-          <div><span style="background-color: #8856a7; margin-left: 10px"></span>75-100%</div>
-          <div><span style="background-color: #810f7c; margin-left: 10px"></span>100-200%</div>
+          <div><span style="background-color: #edf8fb; margin-left: 10px"></span>Very Unlikely</div>
+          <div><span style="background-color: #b3cde3; margin-left: 10px"></span>Unlikely</div>
+          <div><span style="background-color: #8c96c6; margin-left: 10px"></span>Slightly Likely</div>
+          <div><span style="background-color: #8856a7; margin-left: 10px"></span>Likely</div>
+          <div><span style="background-color: #810f7c; margin-left: 10px"></span>Very Likely</div>
           <div><span style="background-color: #ff0000; margin-left: 10px"></span>More than 200%</div>
-          <div><span style="background-color: #252525; margin-left: 10px"></span>Park</div>
         </div>
       <h4>
         Source: Map PLUTO 2020 v8 - <a target="_blank"
@@ -115,8 +113,8 @@
     <div id='mapcontainer'>MAP</div>
       </div>
         <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
     </div>
