Added and refined variables for better display

--- a/index.html
+++ b/index.html
@@ -116,15 +116,17 @@
         <div class='bltfar'> </div>
         <div class='landuse'> </div>
         <div class='tdr' style="margin-bottom: 25px"> </div>
-        <b>MARKET CONDITIONS & TAX INCENTIVES</b>
-        <div class='rent'> </div>
-        <div class='tdr'> </div>
+        <b>AVAILABLE TAX INCENTIVES</b>
+        <div class='qct'> </div>
+        <div class='freshtax'> </div>
         <div class='brwn'> </div>
         <div class='oppzne' style="margin-bottom: 25px"> </div>
         <b>REGULATORY HURDLES</b>
         <div class='lndmrk'> </div>
         <div class='hdist'> </div>
         <div class='rsunits'> </div>
+        <div class='vih'> </div>
+        <div class='mtaz'> </div>
         <div class='fldzne' style="margin-bottom: 25px"> </div>
       </div>
       <div class="sidebar-footer">
