--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- add navigation bar -->
 <nav id='navbar' class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <h1><b><del> Can</del> Should I Build Here?</b></h1>
+    <h1>Development Potential in Manhattan's Lower East Side</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -78,11 +78,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <div class='main-container'>
     <div id='sidebar'>
-      <p> This map divides the amount the Floor Area Ratio (FAR) built as a percent of the maximum allowed FAR.
-          Generally, sites that are substantially 'underbuilt', or built to less than what zoning allows,
-          are more likely result in new construction.</p>
-
-      <p> Use this tool to understand the available incentives and potential
+      <h2>What causes new construction?</h2>
+      <p> A lot of things! Land costs, zoning, regulatory hurdles, existing site conditions: these types of factors
+          impact a lot's development potential. This map assesses that likelihood.</p>
+      <p> Use this tool to understand the zoning, existing conditions, available incentives and potential
           regulatory hurdles associated with development of a parcel of land. </p>
 
       <h4>
@@ -114,11 +113,11 @@
     </div>
 
     <div id='property-details'>
-      <div class='info-container' style="margin-left: 10px">
-        <h2>Click on a lot to learn more</h2>
-        <b><div class='add' style="font-size:18px" style="margin-bottom: 15px"> </div></b>
+      <div class='info-container'>
+        <b><div class='add' style="font-size:22px" style="margin-bottom: 25px" style="margin-top:250px">
+          Click on a lot to learn more </div></b>
         <b>ZONING</b>
-        <div class='zone' &emsp; &nbsp; class='mxfar'> </div>
+        <div class='zone'> </div>
         <div class='mxfar'> </div>
         <div class='sdist' style="margin-bottom: 25px"> </div>
         <b>EXISTING CONDITIONS</b>
