--- a/index.html
+++ b/index.html
@@ -80,15 +80,90 @@
     <div id='sidebar'>
       <h2>What causes new construction?</h2>
       <p> A lot of things! Land costs, zoning, regulatory hurdles, existing site conditions: these types of factors
-          impact a lot's development potential. This map assesses that likelihood.</p>
-      <p> Use this tool to understand the zoning, existing conditions, available incentives and potential
-          regulatory hurdles associated with development of a parcel of land. </p>
+          impact a lot's development potential. Use this tool to understand some of the factors associated with development of a parcel of land. </p>
 
-      <h4>
-        Source: Map PLUTO 2020 v8 - <a target="_blank"
-        href="https://www1.nyc.gov/site/planning/data-maps/open-data/dwn-pluto-mappluto.page" >NYC Department of City Planning.</a>
-      </h4>
+        <div class='info-container'>
+          <b><div class='add' style="font-size:20px" style="margin-bottom: 25px">
+            Click on a lot to learn more </div></b>
+          <b>ZONING</b>
+          <div class='zone'> </div>
+          <div class='mxfar'> </div>
+          <div class='sdist' style="margin-bottom: 25px"> </div>
+          <b>EXISTING CONDITIONS</b>
+          <div class='bltfar'> </div>
+          <div class='landuse'> </div>
+          <div class='tdr' style="margin-bottom: 25px"> </div>
+          <b>AVAILABLE TAX INCENTIVES</b>
+          <div class='qct'> </div>
+          <div class='freshtax'> </div>
+          <div class='brwn'> </div>
+          <div class='oppzne' style="margin-bottom: 25px"> </div>
+          <b>REGULATORY HURDLES</b>
+          <div class='lndmrk'>
+            <div class='tooltip'>Hover over me
+              <span class='tooltiptext'>Tooltip text</span>
+            </div>
+          </div>
+          <div class='hdist'> </div>
+          <div class='rsunits'> </div>
+          <div class='vih'> </div>
+          <div class='mtaz'> </div>
+          <div class='fldzne' style="margin-bottom: 25px"> </div>
+        </div>
+  <!-- This is where the map features should load on.click-->
 
+  <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Sources</button>
+
+
+    </div>
+
+    <div id='property-details'>
+      <div class='info-container'>
+        <h2>Sources</h>
+        <p>
+          Zoning and Lot Information: Map PLUTO 2015 - <a target="_blank"
+          href="https://www1.nyc.gov/site/planning/data-maps/open-data/dwn-pluto-mappluto.page"
+          >NYC Department of City Planning</a>
+        </p>
+        <p>
+          Qualifying Census Tracts for LIHTC - <a target="_blank"
+          href="https://www.huduser.gov/portal/datasets/qct.html"
+          >US Department of Housing and Urban Development</a>
+        </p>
+        <p>
+          Rent Stabilized Data - <a target="_blank"
+          href="https://github.com/talos/nyc-stabilization-unit-counts"
+          >John Krauss</a>
+        </p>
+        <p>
+          Opportunity Zones - <a target="_blank"
+          href="https://esd.ny.gov/opportunity-zones"
+          >New York State Empire State Development Corporation</a>
+        </p>
+        <p>
+          Brownfield Remediation Sites - <a target="_blank"
+          href="https://www.dec.ny.gov/chemical/102009.html"
+          >New York State Department of Environmental Conservation</a>
+        </p>
+        <p>
+          FRESH - <a target="_blank"
+          href="https://www1.nyc.gov/site/planning/data-maps/open-data.page"
+          >NYC Department of City Planning</a>
+        </p>
+      </div>
+      <div class="sidebar-footer">
+        <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Close</button>
+      </div>
+    </div>
+
+    <div id='mapcontainer'>MAP</div>
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
+
+    <div id='legend-container'>
       <div class='legend-head'>
         <b>Likelihood of Development </b>
       </div>
@@ -105,52 +180,8 @@
             <div> </div>
             <div>More Likely</div>
           </div>
-
-      <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Lot Info</button>
-
-  <!-- This is where the map features should load on.click-->
-
     </div>
 
-    <div id='property-details'>
-      <div class='info-container'>
-        <b><div class='add' style="font-size:22px" style="margin-bottom: 25px" style="margin-top:250px">
-          Click on a lot to learn more </div></b>
-        <b>ZONING</b>
-        <div class='zone'> </div>
-        <div class='mxfar'> </div>
-        <div class='sdist' style="margin-bottom: 25px"> </div>
-        <b>EXISTING CONDITIONS</b>
-        <div class='bltfar'> </div>
-        <div class='landuse'> </div>
-        <div class='tdr' style="margin-bottom: 25px"> </div>
-        <b>AVAILABLE TAX INCENTIVES</b>
-        <div class='qct'> </div>
-        <div class='freshtax'> </div>
-        <div class='brwn'> </div>
-        <div class='oppzne' style="margin-bottom: 25px"> </div>
-        <b>REGULATORY HURDLES</b>
-        <div class='lndmrk'> </div>
-        <div class='hdist'> </div>
-        <div class='rsunits'> </div>
-        <div class='vih'> </div>
-        <div class='mtaz'> </div>
-        <div class='fldzne' style="margin-bottom: 25px"> </div>
-      </div>
-      <div class="sidebar-footer">
-        <button type="button" onclick='togglesidebar()' style="margin-left: 10px">Close</button>
-      </div>
-    </div>
-
-
-
-    <div id='mapcontainer'>MAP</div>
-      </div>
-        <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
-        <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
     </div>
 
 </body>
