Eliminated land use code

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <div class='main-container'>
     <div id='sidebar'>
-      <h2>What causes new construction?</h2>
-      <p> A lot of things! Land costs, zoning, regulatory hurdles, existing site conditions: these types of factors
+      <h2>Why do some lots develop and not others?</h2>
+      <p> A lot of reasons! Land costs, zoning, regulatory hurdles, existing site conditions: these types of factors
           impact a lot's development potential. Use this tool to understand some of the factors associated with development of a parcel of land. </p>
 
         <div class='info-container'>
@@ -88,27 +88,22 @@
           <b>ZONING</b>
           <div class='zone'> </div>
           <div class='mxfar'> </div>
-          <div class='sdist' style="margin-bottom: 25px"> </div>
+          <div class='sdist' style="margin-bottom: 10px"> </div>
           <b>EXISTING CONDITIONS</b>
           <div class='bltfar'> </div>
-          <div class='landuse'> </div>
-          <div class='tdr' style="margin-bottom: 25px"> </div>
+          <div class='tdr' style="margin-bottom: 10px"> </div>
           <b>AVAILABLE TAX INCENTIVES</b>
           <div class='qct'> </div>
           <div class='freshtax'> </div>
           <div class='brwn'> </div>
-          <div class='oppzne' style="margin-bottom: 25px"> </div>
+          <div class='oppzne' style="margin-bottom: 10px"> </div>
           <b>REGULATORY HURDLES</b>
-          <div class='lndmrk'>
-            <div class='tooltip'>Hover over me
-              <span class='tooltiptext'>Tooltip text</span>
-            </div>
-          </div>
+          <div class='lndmrk'> </div>
           <div class='hdist'> </div>
           <div class='rsunits'> </div>
           <div class='vih'> </div>
           <div class='mtaz'> </div>
-          <div class='fldzne' style="margin-bottom: 25px"> </div>
+          <div class='fldzne' style="margin-bottom: 10px"> </div>
         </div>
   <!-- This is where the map features should load on.click-->
 
